# server/app/rest_api/serializers.py
@@ -1,0 +1,9 @@
+from pydantic import BaseModel, Field
+
+
+class HealthCheck(BaseModel):
+    """
+    Health check response model.
+    """
+
+    status: str = Field(examples=["OK"])
